k8sfile-bloodbankapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blood-bank-ingress
  namespace: blood-bank
  labels:
    app.kubernetes.io/name: blood
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bloodbank.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
